// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden master > QA preset case600 1`] = `
{
  "decision": {
    "failedInAll": [],
    "noSafeScenario": false,
    "recommendation": "ek10",
  },
  "scenarios": {
    "ek10": {
      "cashLeft": 37000,
      "feasible": true,
      "interestFixed": 179863,
      "interestTotal": 324202,
      "loan": 540000,
      "remainingAfterFixed": 371863,
      "runtimeYears": 28,
      "status": "Gerade so tragbar",
    },
    "ek15": {
      "cashLeft": 7000,
      "feasible": false,
      "interestFixed": 165185,
      "interestTotal": 269334,
      "loan": 510000,
      "remainingAfterFixed": 327185,
      "runtimeYears": 25,
      "status": "Reserve zu dünn",
    },
    "ek20": {
      "cashLeft": -23000,
      "feasible": false,
      "interestFixed": 146264,
      "interestTotal": 214326,
      "loan": 480000,
      "remainingAfterFixed": 278264,
      "runtimeYears": 22.08,
      "status": "Geld reicht nicht",
    },
  },
  "special": {
    "catchUp": [
      {
        "amount": null,
        "id": "ek10",
        "payer": null,
        "planCovers": null,
      },
      {
        "amount": 1105,
        "id": "ek15",
        "payer": "row",
        "planCovers": true,
      },
      {
        "amount": 7054,
        "id": "ek20",
        "payer": "selection",
        "planCovers": false,
      },
    ],
    "planSaving": -99776,
  },
  "tradeoff": {
    "etfForegone": 37734,
    "extraCashRequired": 60000,
    "interestSavedFixed": 33599,
    "netAdvantageFixed": -4134,
  },
  "wait": [
    {
      "cashLeftAfterPurchase": 37000,
      "deltaInterest": 0,
      "deltaTotalCost": 0,
      "months": 0,
    },
    {
      "cashLeftAfterPurchase": 52840,
      "deltaInterest": -30483,
      "deltaTotalCost": -6843,
      "months": 12,
    },
    {
      "cashLeftAfterPurchase": 68637,
      "deltaInterest": -11828,
      "deltaTotalCost": 35452,
      "months": 24,
    },
  ],
}
`;

exports[`golden master > QA preset case720 1`] = `
{
  "decision": {
    "failedInAll": [],
    "noSafeScenario": false,
    "recommendation": "ek10",
  },
  "scenarios": {
    "ek10": {
      "cashLeft": 70400,
      "feasible": true,
      "interestFixed": 217678,
      "interestTotal": 400604,
      "loan": 648000,
      "remainingAfterFixed": 457678,
      "runtimeYears": 28.42,
      "status": "Tragbar",
    },
    "ek15": {
      "cashLeft": 34400,
      "feasible": true,
      "interestFixed": 200059,
      "interestTotal": 332867,
      "loan": 612000,
      "remainingAfterFixed": 404059,
      "runtimeYears": 25.5,
      "status": "Gerade so tragbar",
    },
    "ek20": {
      "cashLeft": -1600,
      "feasible": false,
      "interestFixed": 177300,
      "interestTotal": 264846,
      "loan": 576000,
      "remainingAfterFixed": 345300,
      "runtimeYears": 22.5,
      "status": "Geld reicht nicht",
    },
  },
  "special": {
    "catchUp": [
      {
        "amount": null,
        "id": "ek10",
        "payer": null,
        "planCovers": null,
      },
      {
        "amount": 552,
        "id": "ek15",
        "payer": "row",
        "planCovers": true,
      },
      {
        "amount": 8547,
        "id": "ek20",
        "payer": "selection",
        "planCovers": false,
      },
    ],
    "planSaving": -99922,
  },
  "tradeoff": {
    "etfForegone": 45280,
    "extraCashRequired": 72000,
    "interestSavedFixed": 40378,
    "netAdvantageFixed": -4903,
  },
  "wait": [
    {
      "cashLeftAfterPurchase": 70400,
      "deltaInterest": 0,
      "deltaTotalCost": 0,
      "months": 0,
    },
    {
      "cashLeftAfterPurchase": 85808,
      "deltaInterest": -38308,
      "deltaTotalCost": -14668,
      "months": 12,
    },
    {
      "cashLeftAfterPurchase": 101164,
      "deltaInterest": -15354,
      "deltaTotalCost": 31926,
      "months": 24,
    },
  ],
}
`;

exports[`golden master > QA preset case850 1`] = `
{
  "decision": {
    "failedInAll": [
      "cash",
      "reserve",
      "burden",
    ],
    "noSafeScenario": true,
    "recommendation": null,
  },
  "scenarios": {
    "ek10": {
      "cashLeft": -38345,
      "feasible": false,
      "interestFixed": 259737,
      "interestTotal": 495975,
      "loan": 765000,
      "remainingAfterFixed": 556737,
      "runtimeYears": 29.5,
      "status": "Geld reicht nicht",
    },
    "ek15": {
      "cashLeft": -80845,
      "feasible": false,
      "interestFixed": 238929,
      "interestTotal": 411315,
      "loan": 722500,
      "remainingAfterFixed": 493429,
      "runtimeYears": 26.33,
      "status": "Geld reicht nicht",
    },
    "ek20": {
      "cashLeft": -123345,
      "feasible": false,
      "interestFixed": 211981,
      "interestTotal": 326502,
      "loan": 680000,
      "remainingAfterFixed": 423981,
      "runtimeYears": 23.25,
      "status": "Geld reicht nicht",
    },
  },
  "special": {
    "catchUp": [
      {
        "amount": null,
        "id": "ek10",
        "payer": null,
        "planCovers": null,
      },
      {
        "amount": 3849,
        "id": "ek15",
        "payer": "selection",
        "planCovers": false,
      },
      {
        "amount": 9994,
        "id": "ek20",
        "payer": "selection",
        "planCovers": false,
      },
    ],
    "planSaving": -104659,
  },
  "tradeoff": {
    "etfForegone": 53456,
    "extraCashRequired": 85000,
    "interestSavedFixed": 47757,
    "netAdvantageFixed": -5699,
  },
  "wait": [
    {
      "cashLeftAfterPurchase": -38345,
      "deltaInterest": 0,
      "deltaTotalCost": 0,
      "months": 0,
    },
    {
      "cashLeftAfterPurchase": -24012,
      "deltaInterest": -48897,
      "deltaTotalCost": -25257,
      "months": 12,
    },
    {
      "cashLeftAfterPurchase": -9752,
      "deltaInterest": -20321,
      "deltaTotalCost": 26959,
      "months": 24,
    },
  ],
}
`;

exports[`golden master > default apartment Angebot 450k 1`] = `
{
  "decision": {
    "failedInAll": [],
    "noSafeScenario": false,
    "recommendation": "ek10",
  },
  "scenarios": {
    "ek10": {
      "cashLeft": 47935,
      "feasible": true,
      "interestFixed": 129314,
      "interestTotal": 202498,
      "loan": 405000,
      "remainingAfterFixed": 246314,
      "runtimeYears": 24.08,
      "status": "Tragbar",
    },
    "ek15": {
      "cashLeft": 25435,
      "feasible": true,
      "interestFixed": 118322,
      "interestTotal": 169815,
      "loan": 382500,
      "remainingAfterFixed": 212822,
      "runtimeYears": 21.67,
      "status": "Gerade so tragbar",
    },
    "ek20": {
      "cashLeft": 2935,
      "feasible": false,
      "interestFixed": 104294,
      "interestTotal": 136631,
      "loan": 360000,
      "remainingAfterFixed": 176294,
      "runtimeYears": 19.17,
      "status": "Reserve zu dünn",
    },
  },
  "special": {
    "catchUp": [
      {
        "amount": null,
        "id": "ek10",
        "payer": null,
        "planCovers": null,
      },
      {
        "amount": 1898,
        "id": "ek15",
        "payer": "row",
        "planCovers": true,
      },
      {
        "amount": 5712,
        "id": "ek20",
        "payer": "selection",
        "planCovers": false,
      },
    ],
    "planSaving": -78750,
  },
  "tradeoff": {
    "etfForegone": 28300,
    "extraCashRequired": 45000,
    "interestSavedFixed": 25021,
    "netAdvantageFixed": -3280,
  },
  "wait": [
    {
      "cashLeftAfterPurchase": 47935,
      "deltaInterest": 0,
      "deltaTotalCost": 0,
      "months": 0,
    },
    {
      "cashLeftAfterPurchase": 63994,
      "deltaInterest": -16978,
      "deltaTotalCost": 6662,
      "months": 12,
    },
    {
      "cashLeftAfterPurchase": 80014,
      "deltaInterest": -5739,
      "deltaTotalCost": 41541,
      "months": 24,
    },
  ],
}
`;

exports[`golden master > default apartment Wohnung B 1`] = `
{
  "decision": {
    "failedInAll": [],
    "noSafeScenario": false,
    "recommendation": "ek10",
  },
  "scenarios": {
    "ek10": {
      "cashLeft": 27150,
      "feasible": true,
      "interestFixed": 150538,
      "interestTotal": 284155,
      "loan": 450000,
      "remainingAfterFixed": 312538,
      "runtimeYears": 29.58,
      "status": "Gerade so tragbar",
    },
    "ek15": {
      "cashLeft": 2150,
      "feasible": false,
      "interestFixed": 138305,
      "interestTotal": 234256,
      "loan": 425000,
      "remainingAfterFixed": 275305,
      "runtimeYears": 26.33,
      "status": "Reserve zu dünn",
    },
    "ek20": {
      "cashLeft": -22850,
      "feasible": false,
      "interestFixed": 122517,
      "interestTotal": 184974,
      "loan": 400000,
      "remainingAfterFixed": 234517,
      "runtimeYears": 23.08,
      "status": "Geld reicht nicht",
    },
  },
  "special": {
    "catchUp": [
      {
        "amount": null,
        "id": "ek10",
        "payer": null,
        "planCovers": null,
      },
      {
        "amount": 1548,
        "id": "ek15",
        "payer": "row",
        "planCovers": true,
      },
      {
        "amount": 5458,
        "id": "ek20",
        "payer": "selection",
        "planCovers": false,
      },
    ],
    "planSaving": -117439,
  },
  "tradeoff": {
    "etfForegone": 31445,
    "extraCashRequired": 50000,
    "interestSavedFixed": 28021,
    "netAdvantageFixed": -3424,
  },
  "wait": [
    {
      "cashLeftAfterPurchase": 27150,
      "deltaInterest": 0,
      "deltaTotalCost": 0,
      "months": 0,
    },
    {
      "cashLeftAfterPurchase": 42993,
      "deltaInterest": -27797,
      "deltaTotalCost": -4157,
      "months": 12,
    },
    {
      "cashLeftAfterPurchase": 58793,
      "deltaInterest": -10835,
      "deltaTotalCost": 36445,
      "months": 24,
    },
  ],
}
`;

exports[`golden master > default apartment Wohnung C 1`] = `
{
  "decision": {
    "failedInAll": [
      "reserve",
    ],
    "noSafeScenario": true,
    "recommendation": null,
  },
  "scenarios": {
    "ek10": {
      "cashLeft": 10580,
      "feasible": false,
      "interestFixed": 196843,
      "interestTotal": 635469,
      "loan": 540000,
      "remainingAfterFixed": 460843,
      "runtimeYears": 49.5,
      "status": "Reserve zu dünn",
    },
    "ek15": {
      "cashLeft": -19420,
      "feasible": false,
      "interestFixed": 182115,
      "interestTotal": 487192,
      "loan": 510000,
      "remainingAfterFixed": 416115,
      "runtimeYears": 41.67,
      "status": "Geld reicht nicht",
    },
    "ek20": {
      "cashLeft": -49420,
      "feasible": false,
      "interestFixed": 162696,
      "interestTotal": 359714,
      "loan": 480000,
      "remainingAfterFixed": 366696,
      "runtimeYears": 34.75,
      "status": "Geld reicht nicht",
    },
  },
  "special": {
    "catchUp": [
      {
        "amount": null,
        "id": "ek10",
        "payer": null,
        "planCovers": null,
      },
      {
        "amount": 314,
        "id": "ek15",
        "payer": "row",
        "planCovers": true,
      },
      {
        "amount": 4928,
        "id": "ek20",
        "payer": "selection",
        "planCovers": false,
      },
    ],
    "planSaving": -290247,
  },
  "tradeoff": {
    "etfForegone": 37734,
    "extraCashRequired": 60000,
    "interestSavedFixed": 34147,
    "netAdvantageFixed": -3587,
  },
  "wait": [
    {
      "cashLeftAfterPurchase": 10580,
      "deltaInterest": 0,
      "deltaTotalCost": 0,
      "months": 0,
    },
    {
      "cashLeftAfterPurchase": 25992,
      "deltaInterest": -103014,
      "deltaTotalCost": -79374,
      "months": 12,
    },
    {
      "cashLeftAfterPurchase": 41351,
      "deltaInterest": -55788,
      "deltaTotalCost": -8508,
      "months": 24,
    },
  ],
}
`;
